# smf-vision

./: .gitignore  CHANGELOG.md  DEVELOPING.md  LICENSE  README.md  pyproject.toml
scripts/: download_models.py  start_server.sh
src/smf_vision/: __init__.py  camera_watcher.py  vision_bridge.py
tests/: test_camera_watcher.py  test_vision_bridge.py
