[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smf-vision"
version = "0.1.0"
description = "Remote camera frame ingestion + local VLM analysis pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "SMF Works", email = "dev@smfworks.com"}]
keywords = ["vision", "vlm", "camera", "rtsp", "surveillance", "llama-cpp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
hf = [
    "huggingface-hub>=0.20",
]

[project.scripts]
smf-vision-caption = "smf_vision.vision_bridge:main"
smf-vision-watch = "smf_vision.camera_watcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"